--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 image:
-  file: -gitpod.Dockerfile
+  file: .gitpod.Dockerfile
 tasks:
   - name: Running MongoDB
     command: mkdir -p data && mongod --dbpath data
