--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "mongoose": "^6.3.4",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   }
 }
