--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "iwa_labs",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
@@ -25,5 +24,7 @@
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
